--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,11 @@ style = pep440
 versionfile_source = echopype/_version.py
 versionfile_build = echopype/_version.py
 tag_prefix =
-parentdir_prefix = 
+parentdir_prefix =
+
+[flake8]
+exclude = docs,versioneer.py
+ignore = E203,E266,E501,W503,E722,E402,C901,E731
+max-line-length = 100
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
