--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = echopype
 maintainer = Wu-Jung Lee
 maintainer_email = leewujung@gmail.com
 description = Enhancing the interoperability and scalability in analyzing ocean sonar data
+long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/OSOceanAcoustics/echopype
 license = Apache License, Version 2.0
@@ -18,6 +19,60 @@ author = Wu-Jung Lee
 author_email = leewujung@gmail.com
 platforms = OS Independent
 
+[options]
+packages = find:
+platforms = any
+include_package_data = True
+install_requires =
+    dask[array]
+    matplotlib
+    netCDF4
+    numpy
+    pynmea2
+    pytz
+    scipy
+    xarray
+    zarr
+    fsspec
+    s3fs
+    requests
+    aiohttp
+    typing-extensions~=3.10
+python_requires = >=3.6
+setup_requires =
+    setuptools_scm
+
+[options.extras_require]
+test =
+    docker-compose
+    pytest
+    pytest-cov
+    pytest-flake8
+    pytest-xdist
+    pytest-mock
+lint =
+    black
+    check-manifest
+    flake8
+    flake8-builtins
+    flake8-comprehensions
+    flake8-mutable
+    flake8-print
+    isort
+    mypy
+    numpydoc
+    pre-commit
+    pylint
+docs =
+    sphinx
+    sphinx-automodapi
+    sphinx_rtd_theme
+    sphinxcontrib-mermaid
+all =
+    %(test)s
+    %(lint)s
+    %(docs)s
+
 [black]
 line-length = 100
 
@@ -29,7 +84,7 @@ ignore = E722,E203,W503,T001
 
 [isort]
 known_first_party = echopype
-known_third_party = _echopype_version,setuptools
+known_third_party = setuptools
 multi_line_output = 3
 include_trailing_comma = True
 force_grid_wrap = 0
