--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -29,7 +29,7 @@ jobs:
         python-version: 3.9
 
     - name: Install dependencies
-      run: python -m pip install setuptools wheel
+      run: python -m pip install --upgrade build
 
     # This step is only necessary for testing purposes and for TestPyPI
     - name: Fix up version string for TestPyPI
@@ -38,11 +38,11 @@ jobs:
         # Change setuptools-scm local_scheme to "no-local-version" so the
         # local part of the version isn't included, making the version string
         # compatible with PyPI.
-        sed --in-place "s/node-and-date/no-local-version/g" setup.py
+        sed --in-place "s/node-and-date/no-local-version/g" pyproject.toml
 
     - name: Build source and wheel distributions
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
         echo ""
         echo "Generated files:"
         ls -lh dist/
