--- a/setup.cfg
+++ b/setup.cfg
@@ -39,8 +39,6 @@ install_requires =
     aiohttp
     typing-extensions~=3.10
 python_requires = >=3.6
-setup_requires =
-    setuptools_scm
 
 [options.extras_require]
 test =
@@ -60,7 +58,6 @@ lint =
     flake8-print
     isort
     mypy
-    numpydoc
     pre-commit
     pylint
 docs =
@@ -68,6 +65,8 @@ docs =
     sphinx-automodapi
     sphinx_rtd_theme
     sphinxcontrib-mermaid
+    numpydoc
+    docutils<0.18
 all =
     %(test)s
     %(lint)s
